# vde-test

./: CMakeLists.txt  README.md
demo/: star.sh
src/: channel.c  channel.h  common.h  main.c  posix-socket.c  posix-socket.h  vde-io.c  vde-io.h
